# wayland-mpris-idle-inhibit

./: Cargo.toml  README.md  flake.nix
src/: dbus.rs  main.rs  wayland.rs
