[package]
name = "wayland-mpris-idle-inhibit"
authors = ["Ben C <bwc9876@gmail.com>"]
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
colog = "1.4.0"
env_logger = "0.11.9"
log = "0.4.29"
mpris = "2.0.1"
wayland-client = "0.31.13"
wayland-protocols = { version = "0.32.11", features = ["client", "unstable"] }
zbus = { version = "5.14.0" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
