[package]
name = "wayland-mpris-idle-inhibit"
authors = ["Ben C <ben@bwc9876.dev>"]
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colog = "1.4.0"
env_logger = "0.11.10"
log = "0.4.29"
mpris = "2.1.0"
wayland-client = "0.31.14"
wayland-protocols = { version = "0.32.12", features = ["client", "unstable"] }
zbus = { version = "5.15.0" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
